force-app/main/default/objects/DataVault_Error_Log__c/DataVault_Error_Log__c.object-meta.xml
<CustomObject>
    <description
  >Stores error logs for DataVault and integration operations.</description>
    <label>DataVault Error Log</label>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DataVault Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>