force-app/main/default/objects/DataVault_Error_Log__c/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>Name of the Apex class where the error occurred.</description>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>