force-app/main/default/objects/DataVault_Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description
  >Category: Callout Failure or General Apex Exception.</description>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callout Failure</fullName>
            </value>
            <value>
                <fullName>General Apex Exception</fullName>
                <default>true</default>
                <label>General Apex Exception</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>