force-app/main/default/objects/DataVault_Error_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description
  >Stack trace for debugging. Internal class names only; no PII.</description>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>