force-app/main/default/objects/DataVault_Error_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the error occurred (UTC).</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>