force-app/main/default/objects/DataVault_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class_Name__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>